# design-endterm

./: .gitmodules  CMakeLists.txt  README.md  build.sh  setup.sh
config/: config.yaml  messages.yaml
include/: MessageManager.hpp  Task.hpp  TaskUndoData.hpp  message_manager.hpp
include/my_types/: queue.hpp  stack.hpp  union_find.hpp
src/partA/: main.cpp
src/partB/: main.cpp
src/partC/: main.cpp
src/partC/modules/: components_module.hpp  tasks_module.hpp
